OpenDNSSEC 2.1.10 - 2021-09-10

* OPENDNSSEC-957: Fix exit code signer daemon to not always report failure.
* OPENDNSSEC-958: Fix immediate resalting after migration from 1.4.
* OPENDNSSEC-959: Emit warning on ods-kaspcheck for NSEC iteration count
  that is deemed too high.
* SUPPORT-265: Resolve conflict when deleting keys from HSM whilst
  also performing step in key roll process.  Typically a message
  "key_data_update failed" is present in logs.
* Provided RedHat/CentOS spec file in contrib directory.

OpenDNSSEC 2.1.9 - 2021-05-03

* OPENDNSSEC-955: Prevent concurrency between C_Login/C_OpenSession and
  C_FindObject in PKCS#11 operations as some HSMs do not like this and
  the key may (transiently) not be available.
* OPENDNSSEC-956: Harden the signing procedure to still sign zones for
  which there are unused keys specified in the signconf.  These are
  included by the enforcer because there may be (outdated) signatures
  for them, but the signer doesn't need this reference anymore in 2.1.
  However this was left in for backwards compatibility (probably).

OpenDNSSEC 2.1.8 - 2021-02-20

* OPENDNSSEC-954: Upgrade autoconf/automake configuration chain for
  version 2.69/1.16.2.
* SUPPORT-261: Fix to crash when using ods-enforcer set-policy command.
* OPENDNSSEC-953: Fix to crash in case zone file not present while getting
  a signconf update and state flush command.
  Thanks to Stefan Ubbink from SIDN for the co-operation in this fix.
* OPENDNSSEC-951: Modify the purging of keys, to make it automatic to purge
  keys from the HSM.
  Thanks to Stefan Ubbink from SIDN for the co-operation in this fix.
* OPENDNSSEC-950: Fix that caused crash when signer was offline for a
  prolonged period (but the enforcer wasn't) in the middle of a ZSK roll.
* OPENDNSSEC-952: memory leak in when receiving NOTIFY for non-existent
  zone (Thanks Sébastien Tisserant to for reporting).

OpenDNSSEC 2.1.7 - 2020-10-05
