@@ -1,3 +1,8 @@
+OpenDNSSEC 2 1.11 - 2022-08-TBD
+
+* Improper re-use of already used keys when using <SharedKeys/> as
+  a consequence of previous bug in 2.1.6
+
 OpenDNSSEC 2.1.10 - 2021-09-10
 
 * OPENDNSSEC-957: Fix exit code signer daemon to not always report failure.
